[gd_scene load_steps=11 format=2]

[ext_resource path="res://Graphics/Gimmicks/Screw.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Gimmicks/ScrewPipe.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gimmicks/ScrewPlatform.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 64, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 64, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 64, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 8 )

[node name="CorkScrew" type="Node2D"]
process_priority = 5
script = ExtResource( 3 )

[node name="ScrewPipe" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="ScrewBottom" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Screw" type="KinematicBody2D" parent="."]
position = Vector2( 0, -4 )
z_index = 5
collision_layer = 8207
collision_mask = 8207

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screw"]
shape = SubResource( 1 )

[node name="Screw" type="AnimatedSprite" parent="Screw"]
frames = SubResource( 6 )

[node name="playerChecker" type="Area2D" parent="Screw"]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screw/playerChecker"]
shape = SubResource( 7 )

[node name="FloorCheck" type="RayCast2D" parent="Screw"]
enabled = true
cast_to = Vector2( 0, 12 )

[node name="CeilingCheck" type="RayCast2D" parent="Screw"]
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 4

[node name="DeathTimer" type="Timer" parent="Screw"]

[connection signal="body_entered" from="Screw/playerChecker" to="." method="_on_playerChecker_body_entered"]
[connection signal="body_exited" from="Screw/playerChecker" to="." method="_on_playerChecker_body_exited"]
[connection signal="timeout" from="Screw/DeathTimer" to="." method="_on_DeathTimer_timeout"]
